--- a/hrjobcontract/views/modalRevision.html
+++ b/hrjobcontract/views/modalRevision.html
@@ -59,7 +59,7 @@
     </div>
     <div class="row" ng-show="(revisionDataList.length > itemsPerPage)">
         <div class="col-xs-12 text-center">
-            <pagination boundary-links="true" total-items="revisionDataList.length" rotate="false" items-per-page="itemsPerPage" max-size="maxSize" ng-model="currentPage" class="pagination-sm" previous-text="&lsaquo;" next-text="&rsaquo;" first-text="&laquo;" last-text="&raquo;"></pagination>
+            <uib-pagination boundary-links="true" total-items="revisionDataList.length" rotate="false" items-per-page="itemsPerPage" max-size="maxSize" ng-model="currentPage" class="pagination-sm" previous-text="&lsaquo;" next-text="&rsaquo;" first-text="&laquo;" last-text="&raquo;"></uib-pagination>
         </div>
     </div>
     <div class="modal-footer">
