--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_contributions.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_contributions.scss
@@ -682,6 +682,70 @@
   }
 }
 
+.CRM_Contribute_Form_Task_Email {
+  .crm-contactEmail-form-block {
+    .form-layout-compressed {
+      width: 100%;
+
+      .crm-contactEmail-form-block-recipient {
+        td {
+          &.label {
+            font-weight: 600;
+            color: $gray-darker;
+          }
+
+          &:first-child {
+            &:after {
+              content: "*";
+              font-weight: bold;
+              margin: 0 5px;
+              color: $brand-danger;
+            }
+          }
+        }
+
+        .select2-container {
+          width: 100% !important;
+        }
+      }
+
+      td {
+        &.label {
+          padding-left: 30px !important;
+        }
+      }
+    }
+
+    .crm-html_email-accordion {
+      .helpIcon {
+        margin-bottom: 20px;
+        margin-right: 0;
+      }
+    }
+
+    #s2id_fromEmailAddress,
+    #s2id_to {
+      &:after {
+        display: none;
+      }
+    }
+
+    .crm-contactEmail-form-block-template {
+      .crm-form-select {
+        padding-right: 30px !important;
+      }
+    }
+  }
+
+  .crm-accordion-wrapper {
+    .crm-accordion-body {
+      td.label {
+        padding-left: 15px !important;
+      }
+    }
+  }
+}
+
 .CRM_Contribute_Form_ContributionCharts {
   .ui-tabs-nav {
     background: $crm-white;
