AI-23: Remove right border for rows

--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_memberships.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_memberships.scss
@@ -21,6 +21,7 @@
 
         tr{
           border-bottom: 1px solid $crm-dark-grayblue;
+          border-right: none;
 
           th {
             border-bottom: none;
