AI-46: Adjust crm-clear-link position

--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_memberships.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_memberships.scss
@@ -481,6 +481,11 @@
       td {
         padding-left: 0;
       }
+
+      a.crm-clear-link {
+        position: relative;
+        top: -2px;
+      }
     }
   }
 }
