--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_memberships.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_memberships.scss
@@ -460,3 +460,19 @@
     margin-left: -20px;
   }
 }
+
+.page-civicrm-member-search {
+  .crm-search-tasks {
+    background-color: $crm-white;
+    border-radius: 0;
+    margin-bottom: 20px;
+
+    td {
+      padding: 10px 20px;
+    }
+  }
+
+  .selector {
+    @include mx-expandable-table();
+  }
+}
