AI-46: Uses color variable

--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_memberships.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_memberships.scss
@@ -488,7 +488,7 @@
       }
 
       #_qf_Search_refresh {
-        color: #fff;
+        color: $crm-white;
         background: $brand-primary;
         border-color: $brand-primary;
         text-shadow: none;
