--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/common/_base.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/common/_base.scss
@@ -37,6 +37,7 @@
         margin-bottom: 28px !important;
         padding: 0 40px !important;
         background: $crm-white;
+        color: $gray-darker;
       }
     }
   }
