AI-22: Uses font size variable

--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_export-contact.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_export-contact.scss
@@ -32,7 +32,7 @@
     h3 {
       padding-left: 0;
       color: $gray-darker;
-      font-size: 16px;
+      font-size: $font-size-h3;
     }
   }
 
