--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/my-leave/components/my-leave.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/my-leave/components/my-leave.html
@@ -1,13 +1,13 @@
 <div class="my-leave-page">
   <div class="button-container">
     <div class="btn-group">
-      <button type="button" class="btn btn-primary" leave-request-popup contact-id="myleave.contactId">Record New Absence</button>
+      <button type="button" class="btn btn-primary" leave-request-popup leave-type="leave" contact-id="myleave.contactId">Record New Absence</button>
       <button type="button" class="btn btn-primary dropdown-toggle dropdown-toggle-split"
               data-toggle="dropdown">
         <span class="caret"></span>
       </button>
       <ul class="dropdown-menu">
-        <li><a leave-request-popup contact-id="myleave.contactId" leave-type="sick" href="#">Record Sickness</a></li>
+        <li><a leave-request-popup contact-id="myleave.contactId" leave-type="sickness" href="#">Record Sickness</a></li>
         <li><a leave-request-popup contact-id="myleave.contactId" leave-type="toil" href="#">Record Overtime</a></li>
       </ul>
     </div>
