--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/request-modal/details/sickness.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/request-modal/details/sickness.html
@@ -8,7 +8,7 @@
           <select
             name="reason"
             ng-options="reason.value as reason.label for reason in $ctrl.sicknessReasons"
-            ng-model="$ctrl.request.reason">
+            ng-model="$ctrl.request.sickness_reason">
             <option value="">- select -</option>
           </select>
         </div>
