AI-50: Contributions actions

--- a/org.civicrm.bootstrapcivicrm/scss/bootstrap/overrides/_variables.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/bootstrap/overrides/_variables.scss
@@ -20,7 +20,7 @@ $crm-page-topbar-color:        #fff !default;
 $crm-page-topbar-item-padding: 15px !default;
 $crm-accordion-header-color:   #f3f6f7;
 $crm-dasboard-header:          #5D677B;
-
+$crm-h3-color:                 #525966;
 $crm-wizard-border:            #eff3f5;
 
 
