--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_contributions.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_contributions.scss
@@ -56,7 +56,7 @@
         }
 
         .label-left {
-          padding: 15px 0px;
+          padding: 15px 0;
           width: 220px;
         }
       }
