AI-18: Adjust labels alignment

--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_contributions.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_contributions.scss
@@ -232,6 +232,11 @@
         }
       }
     }
+
+    .crm-contribution-form-block-pcp_details {
+      position: relative;
+      left: -169px;
+    }
   }
 }
 
@@ -633,7 +638,7 @@
 
   .crm-contribution-form-block-pcp_details {
     position: relative;
-    left: -169px;
+    left: -162px;
   }
 }
 
