AI-32: Adjust checkbox alignment

--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/advanced-search/pages/_labels.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/advanced-search/pages/_labels.scss
@@ -166,6 +166,10 @@ a.crm-clear-link {
     float: left;
   }
 
+  input[type=checkbox]:checked+label[for]::after {
+    left: 2px !important;
+  }
+
   td {
     position: relative;
 
