AI-48: replacing 0px with 0

--- a/org.civicrm.bootstrapcivicrm/scss/bootstrap/overrides/_variables.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/bootstrap/overrides/_variables.scss
@@ -1,7 +1,7 @@
 $box-shadow: 0 3px 18px 0 rgba(48, 40, 40, 0.25);
-$crm-box-shadow-sub-panel: 0px 7px 16px 1px rgba(0,0,0,0.1);
-$crm-box-shadow-inset: inset 0px -1px 18px -3px rgba(148,148,148,0.62);
-$crm-select2-box-shadow-inset: inset 0px 0px 9px -5px rgb(51, 51, 51);
+$crm-box-shadow-sub-panel: 0 7px 16px 1px rgba(0,0,0,0.1);
+$crm-box-shadow-inset: inset 0 -1px 18px -3px rgba(148,148,148,0.62);
+$crm-select2-box-shadow-inset: inset 0 0 9px -5px rgb(51, 51, 51);
 
 //== CiviCRM Page
 //
