AI-60: Adjust cell line height

--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/administer/customize-data/_customize-data.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/administer/customize-data/_customize-data.scss
@@ -69,6 +69,7 @@
       td {
         display: table-cell;
         text-align: left;
+        line-height: 1.1 !important;
 
         &:last-child {
           padding-right: 20px;
