--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/common/_tables.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/common/_tables.scss
@@ -26,6 +26,7 @@
   tr,
   tr td {
     border: initial;
+    line-height: 35px;
     padding-left: 15px;
     border-bottom: solid 1px $table-border-color;
   }
